--- a/src/static/index.html
+++ b/src/static/index.html
@@ -39,6 +39,25 @@
         </form>
         <div id="message" class="hidden"></div>
       </section>
+
+      <section id="unregister-container">
+        <h3>Unregister from an Activity</h3>
+        <form id="unregister-form">
+          <div class="form-group">
+            <label for="unregister-email">Student Email:</label>
+            <input type="email" id="unregister-email" required placeholder="your-email@mergington.edu" />
+          </div>
+          <div class="form-group">
+            <label for="unregister-activity">Select Activity to Leave:</label>
+            <select id="unregister-activity" required>
+              <option value="">-- Select an activity --</option>
+              <!-- Activity options will be loaded here -->
+            </select>
+          </div>
+          <button type="submit">Unregister</button>
+        </form>
+        <div id="unregister-message" class="hidden"></div>
+      </section>
     </main>
 
     <footer>
